<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ComparisonSettingsView">


    <TextView
        android:id="@+id/settingViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8CB160"
        android:ems="10"
        android:text="Adjust Comparison Settings"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="24sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settingViewSettingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="viewStart"
            android:textSize="20sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/settingTableTextTop"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Parameters"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settingTableValueTop"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:ems="10"
                android:text="Weights"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/settingYearlySalaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Yearly Salary"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/settingYearlySalaryValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/settingYearlyBonusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Yearly Bonus"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/settingYearlyBonusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/settingRetireBenefitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Retirement Benefits"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/settingRetireBenefitValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/settingRelocationStipendText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Relocation Stipend"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/settingRelocationStipendValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/settingRSUAwardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="RSU Award"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/settingRSUAwardValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settingExitButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="Back" />

        <Button
            android:id="@+id/settingSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:text="Save" />
    </LinearLayout>

</LinearLayout>