...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mainaddCurrentJobButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="100"
                android:height="40dp"
                android:text="Current Job"
                android:textSize="16sp" />

            <Button
                android:id="@+id/mainAddJobOfferButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginRight="20dp"
                android:layout_weight="100"
                android:text="Job Offers"
                android:textSize="16sp" />
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/maincomparisonSettings"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="100"
                android:text="Settings" />

            <Button
                android:id="@+id/mainCompareJobsButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginRight="20dp"
                android:layout_weight="100"
                android:text="Compare Jobs" />
        </LinearLayout>
...
