<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddJobView">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <TextView
        android:id="@+id/addJobViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="Add/Edit Current Job Details"
        android:textAlignment="center"
        android:background="#8CB160"
        android:textColor="#FDFDFD"
        android:textSize="24sp"
        android:height="38dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/jobViewSubtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:textAlignment="viewStart"
            android:textSize="20sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginTop="15dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/settingTableTextTop"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Parameters"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/settingTableValueTop"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:ems="10"
                android:text="Weights"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jobTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Title" />

            <EditText
                android:id="@+id/jobTitleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jobCompanyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Company" />

            <EditText
                android:id="@+id/jobCompanyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jobLocation1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Location State" />

            <EditText
                android:id="@+id/jobLocation1Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jobLocation2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Location City" />

            <EditText
                android:id="@+id/jobLocation2Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jobCostLivingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:inputType="textPersonName"
                android:text="Cost of Living" />

            <EditText
                android:id="@+id/jobCostLivingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="number|numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jobYearlySalaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Yearly Salary" />

            <EditText
                android:id="@+id/jobYearlySalaryValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="numberSigned|numberDecimal"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jobYearlyBonusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Yearly Bonus" />

            <EditText
                android:id="@+id/jobYearlyBonusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="numberSigned|numberDecimal"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jobRetireBenefitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Retirement Benefits" />

            <EditText
                android:id="@+id/jobRetireBenefitValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="number|numberDecimal" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jobRelocationStipendText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Relocation Stipend" />

            <EditText
                android:id="@+id/jobRelocationStipendValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/jobRSUAwardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="RSU Award" />

            <EditText
                android:id="@+id/jobRSUAwardValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="numberSigned|numberDecimal"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/jobExitButton"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="Back" />

        <Button
            android:id="@+id/jobSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Save" />
    </LinearLayout>

</LinearLayout>
</ScrollView>